# mini-renderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: camera.h  indexbuffer.h  renderer.h  shader.h  utils.h  vertexarray.h  vertexbuffer.h  vertexbufferlayout.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  glad.c  indexbuffer.cpp  main.cpp  renderer.cpp  shader.cpp  vertexarray.cpp  vertexbuffer.cpp
src/imgui/: imgui_impl_glfw_gl3.cpp
